// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [0, 0, 0] 1`] = `
<div
  className="pf-l-flex pf-m-inline-flex"
  style={
    {
      "flexWrap": "nowrap",
    }
  }
>
  No applicable advisories
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      tooltipText="Other"
    />
  </FlexItem>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [0, 5, 3] 1`] = `
<div
  className="pf-l-flex pf-m-inline-flex"
  style={
    {
      "flexWrap": "nowrap",
    }
  }
>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={3}
      tooltipText="Security advisories"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={5}
      tooltipText="Bug fixes"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      tooltipText="Other"
    />
  </FlexItem>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 0, 3] 1`] = `
<div
  className="pf-l-flex pf-m-inline-flex"
  style={
    {
      "flexWrap": "nowrap",
    }
  }
>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={3}
      tooltipText="Security advisories"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={1}
      tooltipText="Enhancements"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      tooltipText="Other"
    />
  </FlexItem>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 2, 0] 1`] = `
<div
  className="pf-l-flex pf-m-inline-flex"
  style={
    {
      "flexWrap": "nowrap",
    }
  }
>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={2}
      tooltipText="Bug fixes"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={1}
      tooltipText="Enhancements"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      tooltipText="Other"
    />
  </FlexItem>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 2, 3] 1`] = `
<div
  className="pf-l-flex pf-m-inline-flex"
  style={
    {
      "flexWrap": "nowrap",
    }
  }
>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={3}
      tooltipText="Security advisories"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={2}
      tooltipText="Bug fixes"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      count={1}
      tooltipText="Enhancements"
    />
  </FlexItem>
  <FlexItem
    spacer={
      {
        "default": "spacerXs",
      }
    }
  >
    <AdvisoriesIcon
      Icon={[Function]}
      tooltipText="Other"
    />
  </FlexItem>
</div>
`;
